feat: endpoits basicas do livro